--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h2 class="catagory-story">From 2000 to 2015, the pregnancy rate among New York City (NYC) residents ages 15 to 19 declined 60% and the number of teen pregnancies dropped by more than 16,000. Rates declined notably among Black, Latino, and Asian/Pacific Islander teens, and among teens in neighborhoods where the Health Department has established Neighborhood Health Action Centers.
 
                         During this same period, therewere declines in sexual activity and greater use of hormonal or longactingreversible contraception among NYC public high school students.Declines in NYC teen pregnancy rates are consistent with declines nationally. From 2000 to 2010 (the latest year of US data), the US teen pregnancy rate declined 31%;1 the NYC decline was 29% during the same period.</h2>
-                    <img src="./img/pregnancy-09.jpg" class="info-img"/>
+                    <img src="pregnancy-09.jpg" class="info-img"/>
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
                 <h2 class="catagory-story">From 2009 to 2015, among sexually active female teens in NYC public high schools, use of hormonal birth control (HBC) or longactin greversible contraception (LARC)‡ increased from 17% to 26%.
 
                 Dual protection (condom with HBC or LARC) provides maximum protection from both sexually transmitted infections and unintended pregnancies. Among sexually active female and male teens in NYC public high schools, 10% used dual protection in 2015. </h2>
-                <img src="./img/pregnancy-08.jpg" class="info-img"/>
+                <img src="pregnancy-08.jpg" class="info-img"/>
             </div>
     
             </div>
@@ -78,7 +78,7 @@
             </svg>
         </div>
         </div>
-        <script src="./app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
     
